// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Badge component renders properly 1`] = `
<span
  className="webex-badge badge"
>
  <div
    className="webex-badge-count count"
  >
    +100
  </div>
</span>
`;

exports[`Badge component renders properly with tooltip 1`] = `
<span
  className="webex-badge badge"
>
  <div
    className="webex-badge-tooltip tooltip"
  >
    <div
      className="webex-badge-text tooltipText"
    >
      <p>
        Things
      </p>
    </div>
  </div>
  <div
    className="webex-badge-count count"
  >
    +100
  </div>
</span>
`;
